--- a/landingPage/project.html
+++ b/landingPage/project.html
@@ -50,8 +50,10 @@
                                 <img src="./img/project/eve/arrow_left.png" alt="이전 컨텐츠 보이기">
                                 <img src="./img/project/eve/arrow_right.png" alt="다음 컨텐츠 보이기">
                             </figure>
-                            <span>play</span>
-                            <span class="active">stop</span>
+                            <div class="cont_btn">
+                                <span>play</span>
+                                <span>stop</span>
+                            </div>
                         </div>
                     </div>
                 </div>
