--- a/landingPage/contact.html
+++ b/landingPage/contact.html
@@ -35,13 +35,19 @@
                     <figure>
                         <img src="./img/contact/contact me.png" alt="">
                         <figcaption>Contact</figcaption>
+                        <div class="contact_link">
+                            <a href="mailto:lmk206@naver.com"><img src="./img/contact/email.png" alt="이메일 입니다."></a>
+                            <a href="tel:010-9639-6293"><img src="./img/contact/smartphone.png" alt="tel입니다."></a>
+                            <a href="https://github.com/lmk206"><img src="./img/contact/github.png" alt="깃허브입니다."></a>
+                        </div>
                     </figure>
+                    
                 </div>
                 <div class="right_con">
                     <article>
                         <h1>사용자들에게 즐거움을 주는 
                             개발자가 되겠습니다.</h1>
-                        <p>문의하실 내용이 있으시면 <span>010-9639-6293</span>으로 연락 주시거나 아래 메시지를 남겨주세요.</p>
+                        <p>문의하실 내용이 있으시면 아래 메시지를 남겨주세요.</p>
                         <form name="contact" method="post" action="admin/contact/request_res.php">
                             <input type="text" placeholder="Your name" name="name">
                             <input type="text" placeholder="Your Email" name="email">
