--- a/landingPage/project.html
+++ b/landingPage/project.html
@@ -51,8 +51,8 @@
                                 <img src="./img/project/eve/arrow_right.png" alt="다음 컨텐츠 보이기">
                             </figure>
                             <div class="cont_btn">
-                                <span>play</span>
-                                <span>stop</span>
+                                <span><img src="./img/project/button_play.png" alt="play버튼입니다."></span>
+                                <span><img src="./img/project/button_stop.png" alt="stop버튼입니다."></span>
                             </div>
                         </div>
                     </div>
@@ -71,12 +71,12 @@
 
                 <div class="pop_up">
                     <figure>
-                        <a href="#"><img src="./img/project/eve/index.jpg" alt=""></a>
-                        <a href="#"><img src="./img/project/wick/index.jpg" alt=""></a>
-                        <a href="#"><img src="./img/project/deco/index.png" alt=""></a>
-                        <a href="#"><img src="./img/project/readyContents.png" alt=""></a>
-                        <a href="#"><img src="./img/project/readyContents.png" alt=""></a>
-                        <a href="#"><img src="./img/project/readyContents.png" alt=""></a>
+                        <a href=""><img src="./img/project/eve/index.jpg" alt="포트폴리오 이브"></a>
+                        <a href=""><img src="./img/project/wick/index.jpg" alt="포트폴리오 존 윅"></a>
+                        <a href=""><img src="./img/project/deco/index.png" alt="포트폴리오 데코"></a>
+                        <a href=""><img src="./img/project/readyContents.png" alt="준비중"></a>
+                        <a href=""><img src="./img/project/readyContents.png" alt="준비중"></a>
+                        <a href=""><img src="./img/project/readyContents.png" alt="준비중"></a>
                     </figure>
                     <div class="exit">
                         <span></span>
