--- a/landingPage/about.html
+++ b/landingPage/about.html
@@ -50,7 +50,7 @@
                             개발자가 되겠습니다.
                         </h2>
                         <div class="intro_con">
-                            <img src="./img/index/logo.png" alt="" class="pic">
+                            <img src="./img/about/profile/profile1.png" alt="" class="pic">
                             
                                 <article>
                                     <div>
